--- a/sample-fourteen-bootstrap/public/product-header-attribute.html
+++ b/sample-fourteen-bootstrap/public/product-header-attribute.html
@@ -1,1 +1,1 @@
-<p> complemento de detalhes recebidos por atributo</p>
+<p class="list-group-item-text"> complemento de detalhes recebidos por atributo</p>
