--- a/sample-fourteen-bootstrap/public/product-header.html
+++ b/sample-fourteen-bootstrap/public/product-header.html
@@ -1,2 +1,11 @@
-<h1 >{{product.name}}</h1>
-<button ng-show="product.canPurchase" class = "btn btn-success"> Buy Product</button>
+<div class="media">
+  <div class="media-left">
+    <a href="#">
+    <img ng-src="{{product.imagegif}}" class="media-object">
+    </a>
+  </div>
+  <div class="media-body">
+    <h2 class="media-heading">{{product.name}}</h2>
+    ...
+  </div>
+</div>
